# mkdataset

./: .gitignore  CLAUDE.md  README.md  config.toml  mkdataset.py  pyproject.toml
.serena/: project.yml
tests/: test_mkdataset.py
