[project]
name = "mkdataset"
version = "0.1.0"
description = "LLM CPT dataset builder from source code files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "pillow>=12.1.1",
    "tokenizers>=0.22.2",
]

[project.scripts]
mkdataset = "mkdataset:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
